--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
 		</style>
 
 		<title>
-Notice: Undefined offset: 1 in C:\wamp64\www\shuriken\helpers.php on line 74
+Casita Plans
 </title>
 		<meta name="google-site-verification" content="qNyxY7bED-bnsZ-IetGiOlLVgi8K1UZ41gOWXl4NPGQ" />	</head>
 	<body>
 		<div id="title" class="">
 			<a href="">
-Notice: Undefined offset: 1 in C:\wamp64\www\shuriken\helpers.php on line 74
+Casita Plans
 </a>
 		</div>
 		<div class="container">
